--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ body {
 
 /* 评论组件样式 */
 .comment {
+  position: relative;
   display: flex;
   border-bottom: 1px solid #f1f1f1;
   margin-bottom: 10px;
@@ -95,6 +96,33 @@ body {
 
 .comment .comment-user {
   flex-shrink: 0;
+}
+
+.comment-username {
+  color: #00a3cf;
+  font-style: italic;
+}
+
+.comment-createtime {
+  padding-right: 5px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 5px;
+  font-size: 12px;
+}
+
+.comment:hover .comment-delete {
+  color: #00a3cf;
+}
+
+.comment-delete {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: transparent;
+  font-size: 12px;
+  cursor: pointer;
 }
 
 .comment span {
@@ -107,4 +135,9 @@ body {
   /* text-indent: 2em; */
 }
 
+code {
+  border: 1px solid #ccc;
+  background: #f9f9f9;
+  padding: 0px 2px;
+}
 
